<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="log_in">Log In</string>
    <string name="uid">Uid</string>
    <string name="write_message">Введите сообщение</string>
    <string name="send_message">Отправить</string>
</resources>